# perfm

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  README.md
.air/plans/: implement-perfm-cpp-cli.plan.md
cmake/: compiler_warnings.cmake
src/: main.cpp
src/cli/: duration_parser.cpp  duration_parser.h  options.h  parser.cpp  parser.h
src/collectors/: cpu_collector.h  cpu_collector_linux.cpp  cpu_collector_macos.cpp  cpu_collector_win.cpp  file_io_collector_linux.cpp  file_io_collector_macos.cpp  file_io_collector_win.cpp  gpu_collector.cpp  gpu_collector.h  io_collector.h  memory_collector.h  memory_collector_linux.cpp  memory_collector_macos.cpp  memory_collector_win.cpp  network_collector_linux.cpp  network_collector_macos.cpp  network_collector_win.cpp
src/core/: collector.h  metric.h  sample.h  sampler.cpp  sampler.h  summary.cpp  summary.h
src/output/: csv_formatter.cpp  formatter.h  json_formatter.cpp  markdown_formatter.cpp  output_writer.h  stdout_formatter.cpp  stdout_graph_formatter.cpp  summary_formatter.cpp
src/process/: child_process.cpp  child_process.h  child_process_posix.cpp  child_process_win.cpp  process_tree.h  process_tree_linux.cpp  process_tree_macos.cpp  process_tree_win.cpp
tests/: CMakeLists.txt  duration_parser_tests.cpp  formatter_tests.cpp  parser_tests.cpp  sampler_tests.cpp
tests/helpers/: sleeper.cpp  spawner.cpp
